Lilac: write most of the output files